force-app/main/default/objects/Jira_Configuration__mdt/Jira_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Jira Configuration</label>
    <pluralLabel>Jira Configurations</pluralLabel>
</CustomObject>