force-app/main/default/objects/Jira_Configuration__mdt/fields/Assignee_Field__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Field__c</fullName>
    <label>Assignee Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>