force-app/main/default/objects/Jira_Configuration__mdt/fields/Default_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Default_User_ID__c</fullName>
    <label>Default User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>