force-app/main/default/objects/Jira_Configuration__mdt/fields/Error_Blank_Project_Key__c.field-meta.xml
<CustomField>
    <fullName>Error_Blank_Project_Key__c</fullName>
    <label>Error Blank Project Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>