force-app/main/default/objects/Jira_Configuration__mdt/fields/Error_Project_Not_Found__c.field-meta.xml
<CustomField>
    <fullName>Error_Project_Not_Found__c</fullName>
    <label>Error Project Not Found</label>
    <length>255</length>
    <type>Text</type>
</CustomField>