force-app/main/default/objects/Jira_Configuration__mdt/fields/Issue_Transition_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Issue_Transition_Endpoint__c</fullName>
    <label>Issue Transition Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>