force-app/main/default/objects/Jira_Configuration__mdt/fields/Issue_Type_Task__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type_Task__c</fullName>
    <label>Issue Type Task</label>
    <length>255</length>
    <type>Text</type>
</CustomField>