force-app/main/default/objects/Jira_Configuration__mdt/fields/Jira_API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Jira_API_Endpoint__c</fullName>
    <label>Jira API Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>