force-app/main/default/objects/Jira_Configuration__mdt/fields/Jira_API_Token__c.field-meta.xml
<CustomField>
    <fullName>Jira_API_Token__c</fullName>
    <label>Jira API Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>