force-app/main/default/objects/Jira_Configuration__mdt/fields/Jira_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Jira_Base_URL__c</fullName>
    <label>Jira Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>