force-app/main/default/objects/Jira_Configuration__mdt/fields/Jira_Deployed_On_Prod_Transition_ID__c.field-meta.xml
<CustomField>
    <fullName>Jira_Deployed_On_Prod_Transition_ID__c</fullName>
    <label>Jira Deployed On Prod Transition ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>