force-app/main/default/objects/Jira_Configuration__mdt/fields/Jira_Fields__c.field-meta.xml
<CustomField>
    <fullName>Jira_Fields__c</fullName>
    <label>Jira Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>