force-app/main/default/objects/Jira_Configuration__mdt/fields/Jira_QA_Transition_ID__c.field-meta.xml
<CustomField>
    <fullName>Jira_QA_Transition_ID__c</fullName>
    <label>Jira QA Transition ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>