force-app/main/default/objects/Jira_Configuration__mdt/fields/Jira_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Jira_User_Name__c</fullName>
    <label>Jira User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>