force-app/main/default/objects/Jira_Configuration__mdt/fields/Parent_Status__c.field-meta.xml
<CustomField>
    <fullName>Parent_Status__c</fullName>
    <label>Parent Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>