force-app/main/default/objects/Jira_Configuration__mdt/fields/Request_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Request_Timeout__c</fullName>
    <label>Request Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>