force-app/main/default/objects/Jira_Configuration__mdt/fields/SF_FULL_STAGE_NAME__c.field-meta.xml
<CustomField>
    <fullName>SF_FULL_STAGE_NAME__c</fullName>
    <label>SF FULL STAGE NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>