force-app/main/default/objects/Jira_Configuration__mdt/fields/SF_In_UAT_Status__c.field-meta.xml
<CustomField>
    <fullName>SF_In_UAT_Status__c</fullName>
    <label>SF In UAT Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>