force-app/main/default/objects/Jira_Configuration__mdt/fields/SF_Ready_For_QA_Status__c.field-meta.xml
<CustomField>
    <fullName>SF_Ready_For_QA_Status__c</fullName>
    <label>SF Ready For QA Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>