force-app/main/default/objects/Jira_Configuration__mdt/fields/SF_READY_TO_UAT_FIELD__c.field-meta.xml
<CustomField>
    <fullName>SF_READY_TO_UAT_FIELD__c</fullName>
    <label>SF READY TO UAT FIELD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>