force-app/main/default/objects/Jira_Configuration__mdt/fields/SF_Status_Closed__c.field-meta.xml
<CustomField>
    <fullName>SF_Status_Closed__c</fullName>
    <label>SF Status Closed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>