force-app/main/default/objects/Jira_Configuration__mdt/fields/Sub_Task_status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Task_status__c</fullName>
    <label>Sub Task status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>