force-app/main/default/objects/Jira_Configuration__mdt/fields/Work_Item_Creation_Field__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Creation_Field__c</fullName>
    <label>Work Item Creation Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>