force-app/main/default/objects/Jira_Configuration__mdt/fields/Work_Item_In_Progress_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_In_Progress_Status__c</fullName>
    <label>Work Item In Progress Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>